--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url = jdbc:mysql://localhost:3306/td1_spring
+spring.datasource.username = td1-admin
+spring.datasource.password = td1-admin
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto = update
