ajout des controller / ajout de swagger / permit all dans la sécurité pour tester les routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.datasource.username = td1-admin
 spring.datasource.password = td1-admin
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto = update
+
+
+
+springdoc.packagesToScan=com.ynov.tp_spring.controllers
+springdoc.api-docs.path=/api/docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/api
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.doc-expansion= none
